welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var couleuravant: Boolean
    ^SlugTracking:8: error: value update is not a member of java.awt.Color
if(getCouleurSol()=green){
   ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
	couleuravant=true
                    ^