welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {

var couleuravant: Boolean

avance()

if(getCouleurSol()=green){

	couleuravant=true
}else{
	couleuravant=false

return couleuravant 
    // Write your code here
}    
}
